plplot: removed fortran support by gcc44 from default_variants
git-svn-id: https://svn.macports.org/repository/macports/trunk@70787 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/plplot/Portfile
+++ b/dports/science/plplot/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 
 name            plplot
 version         5.9.6
-revision        1
+revision        2
 platforms       darwin
 maintainers     takeshi
 categories      science
@@ -47,7 +47,6 @@ configure.cmd           cmake
 configure.env           HOME=${workpath}
 configure.pre_args      -DCMAKE_INSTALL_PREFIX=${prefix}
 configure.args          -DCMAKE_VERBOSE_MAKEFILE=ON \
-                        -DCMAKE_Fortran_FLAGS=${configure.fflags} \
                         -DCMAKE_C_COMPILER=${configure.cc} \
                         -DCMAKE_C_FLAGS=\"${configure.cflags} ${configure.cppflags}\" \
                         -DCMAKE_CXX_COMPILER=${configure.cxx} \
@@ -73,18 +72,29 @@ configure.args          -DCMAKE_VERBOSE_MAKEFILE=ON \
                         -DPLD_pdfcairo=ON \
                         -DPLD_pngcairo=ON \
                         -DPLD_svgcairo=ON \
+                        -DPLD_tk=ON \
                         -DPLD_wxwidgets=OFF \
                         -DPLD_xcairo=ON  \
                         -DPLD_tkwin=OFF \
-                        -DENABLE_gnome2=OFF \
-                        -DENABLE_java=OFF \
-                        -DENABLE_python=OFF \
-                        -DENABLE_octave=OFF \
-                        -DENABLE_pdl=OFF \
+                        -DENABLE_ada=OFF \
+                        -DENABLE_d=OFF \
+                        -DENABLE_f77=OFF \
+                        -DENABLE_f95=OFF \
                         -DENABLE_itcl=OFF \
                         -DENABLE_itk=OFF \
+                        -DENABLE_java=OFF \
+                        -DENABLE_lua=OFF \
+                        -DENABLE_ocaml=OFF \
+                        -DENABLE_octave=OFF \
+                        -DENABLE_pdl=OFF \
+                        -DENABLE_pyqt4=OFF \
+                        -DENABLE_python=OFF \
+                        -DENABLE_qt=OFF \
+                        -DENABLE_tcl=ON \
+                        -DENABLE_tk=ON \
                         -DENABLE_wxwidgets=OFF \
                         -DBUILD_TEST=OFF \
+                        -DHAVE_AGG=OFF \
                         -DSWIG_DIR=${prefix}/bin
 configure.post_args     ../${distname}
 
@@ -131,21 +141,24 @@ if {${os.platform}=="darwin"} {
 # variant gcw is deleted since it has been deprecated
 # gd driver (gif, jpeg, png, svg) has been deprecated
 
-if {![variant_isset g95] && ![variant_isset gcc43] && ![variant_isset universal]} {
-    default_variants +gcc44
-}
-variant gcc43 conflicts g95 gcc44 universal description {Build using gcc43} {
+variant gcc43 conflicts g95 gcc44 universal description {Add support for fortran using gfortran-mp-4.3} {
     depends_lib-append      port:gcc43
+    configure.args-delete   -DENABLE_f77=OFF \
+                            -DENABLE_f95=OFF
     configure.args-append   -DCMAKE_Fortran_COMPILER=\"${prefix}/bin/gfortran-mp-4.3\" \
                             -DCMAKE_Fortran_FLAGS=\"${configure.fflags}\"
 }
-variant gcc44 conflicts g95 gcc43 universal description {Build using gcc44} {
+variant gcc44 conflicts g95 gcc43 universal description {Add support for fortran using gfortran-mp-4.4} {
     depends_lib-append      port:gcc44
+    configure.args-delete   -DENABLE_f77=OFF \
+                            -DENABLE_f95=OFF
     configure.args-append   -DCMAKE_Fortran_COMPILER=\"${prefix}/bin/gfortran-mp-4.4\" \
                             -DCMAKE_Fortran_FLAGS=\"${configure.fflags}\"
 }
-variant g95 conflicts gcc43 gcc44 universal description {Build using g95} {
+variant g95 conflicts gcc43 gcc44 universal description {Add support for fortran using g95} {
     depends_lib-append      port:g95
+    configure.args-delete   -DENABLE_f77=OFF \
+                            -DENABLE_f95=OFF
     configure.args-append   -DCMAKE_Fortran_COMPILER=\"${prefix}/bin/g95\" \
                             -DCMAKE_OSX_DEPLOYMENT_TARGET=\"\"
 # Ad hoc fix to enable build of f95 binding by disabling some features
@@ -178,6 +191,7 @@ variant python25 description {Add support for python25} {
 
 variant gdc description {Add support for D} {
     depends_lib-append      port:gdc
+    configure.args-delete   -DENABLE_d=OFF
     configure.args-append   -DENABLE_d=ON
 }
 
