--- a/dports/editors/vim-app/Portfile
+++ b/dports/editors/vim-app/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 name                vim-app
 set realname        vim
 set vim_version     7.3
-set vim_patchlevel  3
+set vim_patchlevel  003
 version             ${vim_version}.${vim_patchlevel}
 revision            1
 categories          editors
@@ -215,4 +215,5 @@ platform darwin powerpc {
 
 livecheck.type  regex
 livecheck.url   http://ftp.vim.org/pub/${realname}/patches/${vim_version}/?O=D
+livecheck.version [format "%s.%03d" $vim_version $vim_patchlevel]
 livecheck.regex (${vim_version}\.\\d+)
