--- a/dports/editors/vim/Portfile
+++ b/dports/editors/vim/Portfile
@@ -198,4 +198,5 @@ platform puredarwin {
 
 livecheck.type  regex
 livecheck.url   http://ftp.vim.org/pub/${name}/patches/${vim_version}/?O=D
+livecheck.version [format "%s.%03d" $vim_version $vim_patchlevel]
 livecheck.regex (${vim_version}\.\\d+)
