--- a/dports/devel/bam/Portfile
+++ b/dports/devel/bam/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            bam
-version         0.3.2
+version         0.4.0
 categories      devel
 platforms       darwin
 maintainers     raimue openmaintainer
@@ -16,11 +16,11 @@ long_description \
 homepage        http://matricks.github.com/bam/
 
 master_sites    http://github.com/downloads/matricks/bam/
-checksums       md5     8dd54d166818fc4ed56e6db94d4413d8 \
-                sha1    f0ee1917c58e4a58f27f8233b5d1e6fbc4aa6c9f \
-                rmd160  8050428b71f08c7fdcd773099b6f40472de324f8
+checksums       md5     2f8e8336b8884110e8a355b12c9fa58a \
+                sha1    c0f32ff9272d5552e02a9d68fbdd72106437ee69 \
+                rmd160  cbb8d56c891e650f0a14c9a55efc4e9cc96e0e28
 
-depends_build   port:asciidoc
+depends_build   port:python26
 
 post-patch {
     reinplace "s:^gcc:${configure.cc}:" ${worksrcpath}/make_unix.sh
@@ -31,19 +31,19 @@ use_configure   no
 build.cmd       ./make_unix.sh
 build.target
 
-# manually generate man page using asciidoc
 post-build {
-    system "cd ${worksrcpath} && a2x -f manpage docs/bam.1.txt"
+    system "cd ${worksrcpath} && ${prefix}/bin/python2.6 scripts/gendocs.py"
 }
 
 test.run        yes
-test.cmd        ./test.py
+test.cmd        ${prefix}/bin/python2.6 scripts/test.py
 test.target
 
 # there is no install target
 destroot {
-    copy ${worksrcpath}/docs/bam.1 ${destroot}${prefix}/share/man/man1/
-    copy ${worksrcpath}/bam ${destroot}${prefix}/bin/
+    xinstall -d -m 755 ${destroot}${prefix}/share/doc/bam/
+    xinstall -m 644 ${worksrcpath}/docs/bam.html ${destroot}${prefix}/share/doc/bam/
+    xinstall -m 755 ${worksrcpath}/bam ${destroot}${prefix}/bin/
 }
 
 livecheck.type  regex
