--- a/dports/aqua/FScript/Portfile
+++ b/dports/aqua/FScript/Portfile
@@ -8,7 +8,7 @@ name                    FScript
 version                 2.0.1
 categories              aqua lang
 platforms               darwin
-maintainers             bfulgham
+maintainers             nomaintainer
 
 description             Open-source interactive Cocoa scripting environment
 long_description        F-Script is an open-source interactive and scripting \
