--- a/dports/sysutils/grep/Portfile
+++ b/dports/sysutils/grep/Portfile
@@ -5,7 +5,7 @@ name            grep
 version         2.5.4
 platforms       darwin
 categories	sysutils
-maintainers	waqar
+maintainers	nomaintainer
 description     GNU grep, the \"fastest grep in the west\" (we hope).
 long_description \
     Grep searches one or more input files for lines containing a match  \
