Update python/py26-webhelpers to 1.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70800 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-webhelpers/Portfile
+++ b/dports/python/py26-webhelpers/Portfile
@@ -4,7 +4,7 @@ PortSystem              1.0
 PortGroup               python26 1.0
 
 name                    py26-webhelpers
-version                 1.1
+version                 1.2
 epoch                   1
 maintainers             perry openmaintainer
 platforms               darwin
@@ -22,8 +22,9 @@ livecheck.type          regex
 livecheck.url           ${homepage}
 
 depends_build-append    port:py26-distribute
+depends_lib-append      port:py26-markupsafe
 
 distname                WebHelpers-${version}
 master_sites            http://pypi.python.org/packages/source/W/WebHelpers/
 
-checksums               rmd160 64a3ccc317955fc05e31791fa88709b61a97ced5
+checksums               rmd160 81aafadb603bcf9d8d40bfb02e1c3ef26b164b08
