libgweather: update to version 2.30.2, patchfile, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70803 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libgweather/Portfile
+++ b/dports/net/libgweather/Portfile
@@ -4,8 +4,7 @@
 PortSystem      1.0
 
 name            libgweather
-version         2.26.2.1
-revision        2
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      net gnome
@@ -21,9 +20,9 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     cef0447b62235c4662aa9691dd9a6c92 \
-                sha1    f6d6ee5bb9eb7b81e9a413cd75e4ac86d1bc4421 \
-                rmd160  0639ebe78f9d7f99bc6299e94b013565654ef476
+checksums       md5     050f4ed212261c2a147c89012d5daa90 \
+                sha1    0b871e517a45314ff9b6701d406fa57224326e04 \
+                rmd160  3950b8342e4e5fe5435c780193dc19f978e6f375
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -32,7 +31,7 @@ depends_build   port:pkgconfig \
 
 depends_lib     port:gconf \
                 port:libsoup \
-                port:py26-gtk
+                port:py26-gobject
 
 patchfiles      patch-python-prefix.diff
 
