science/lscsoft-deps: add libtool as a dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@70809 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/lscsoft-deps/Portfile
+++ b/dports/science/lscsoft-deps/Portfile
@@ -35,7 +35,8 @@ depends_run   port:python26 \
               port:cfitsio \
               port:git-core \
               port:autoconf \
-              port:automake
+              port:automake \
+              port:libtool
 
 build {}
 destroot {
