science/lscsoft-deps: specify noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@70811 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/lscsoft-deps/Portfile
+++ b/dports/science/lscsoft-deps/Portfile
@@ -7,6 +7,7 @@ version         20090911
 categories      science
 maintainers     ram
 platforms       darwin
+supported_archs noarch
 
 description     LSCSoft dependencies meta-port
 long_description  This is a meta-port that depends on all the ports \
