py26-jinja2: depend on MarkupSafe for speedups
git-svn-id: https://svn.macports.org/repository/macports/trunk@70814 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-jinja2/Portfile
+++ b/dports/python/py26-jinja2/Portfile
@@ -6,6 +6,7 @@ PortGroup           python26 1.0
 
 name                py26-jinja2
 version             2.5.2
+revision            1
 categories-append   devel
 license             BSD
 maintainers         jmr openmaintainer
@@ -26,10 +27,8 @@ checksums           md5 3829be2926a067ee024e6d3e5327dbf7 \
                     sha1 d68a2dbc7e8e280e350c52090d472024a87642a2 \
                     rmd160 b69c4505bc14f1fc8c4af67c2baa5b02fc17d99f
 
-depends_lib         port:py26-distribute
-
-build.cmd-append    --with-speedups
-destroot.cmd-append --with-speedups
+depends_lib         port:py26-distribute \
+                    port:py26-markupsafe
 
 livecheck.type  regex
 livecheck.url   http://pypi.python.org/pypi/Jinja2/
