--- a/dports/multimedia/libtheora/Portfile
+++ b/dports/multimedia/libtheora/Portfile
@@ -35,8 +35,7 @@ post-patch {
 }
 
 depends_build   port:pkgconfig
-depends_lib     port:libvorbis \
-                port:libogg
+depends_lib     port:libvorbis
 
 configure.env   SDL_CONFIG=/dev/null
 configure.args  --disable-oggtest \
