gnome/gst-plugins-base removed dependency on liboil, added no_ogg variant per user suggestion
git-svn-id: https://svn.macports.org/repository/macports/trunk@70816 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-base/Portfile
+++ b/dports/gnome/gst-plugins-base/Portfile
@@ -5,15 +5,13 @@ PortSystem          1.0
 
 name                gst-plugins-base
 version             0.10.30
+revision            1
 description         This is gst-plugins, a set of plug-ins for GStreamer.
 long_description    ${description}
 maintainers         rmsfisher openmaintainer
 categories          gnome
 platforms           darwin
 homepage            http://gstreamer.freedesktop.org/
-
-# port:liboil is not universal
-universal_variant   no
 
 use_bzip2           yes
 master_sites        gnome:sources/gst-plugins-base/0.10/ http://gstreamer.freedesktop.org/src/${name}/
@@ -25,11 +23,8 @@ checksums           md5     3ad90152b58563e1314af26c263f3c4c \
 depends_lib	\
     port:gstreamer \
     port:gnome-vfs \
-    port:liboil \
-    port:libogg \
     port:libtheora \
     port:openssl \
-    port:libvorbis \
     port:orc
 
 configure.args \
@@ -51,6 +46,10 @@ variant no_gnome_vfs description {Remove library dependency on gnome-vfs} {
     configure.args-append --disable-gnome_vfs
 }
 
+variant no_ogg description {Remove library dependency on libogg and its dependents} {
+    depends_lib-delete port:libtheora
+    configure.args-append --disable-ogg --disable-vorbis --disable-theora
+}
 #
 # current cdparanoia port (cdparanoia III 10.2) appears to not be API compatible
 # with gst-plugins-base.  See #19843. 
