net/libnice upgraded version from 0.0.12 to 0.0.13, added patch to work around a pointer error, allowed universal variant per updated gst-plugins-base
git-svn-id: https://svn.macports.org/repository/macports/trunk@70828 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libnice/Portfile
+++ b/dports/net/libnice/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            libnice
-version         0.0.12
+version         0.0.13
 description     Libnice is an implementation of the IETF's draft Interactice \
                 Connectivity Establishment standard (ICE).
 long_description \
@@ -17,20 +17,16 @@ platforms       darwin
 homepage        http://nice.freedesktop.org/wiki/
 master_sites    http://nice.freedesktop.org/releases/
 
-checksums       md5     fe25005032c441ecfaa0c19ac6b78ee7 \
-                sha1    839b88f01ebf92e1cc2b6696b91ff556f2f3e40c \
-                rmd160  934866ac2e1340391cf3ec5ac670cd2683cc9979
+checksums           md5     e5b9f799a57cb939ea2658ec35253ab9 \
+                    sha1    703b03fbb20da693c057d3fe5074b182a17c7364 \
+                    rmd160  0a20d03c4ed0fb1677149b2d9595a6111e958a15
 
 depends_build   port:pkgconfig \
                 port:gtk-doc
 
 depends_lib     port:gst-plugins-base
 
-#
-# gst-plugins-base is not universal
-#
-
-universal_variant   no
+patchfiles      patch-agent-interfaces.c.diff
 
 configure.args  --disable-gupnp \
                 --with-gstreamer
