php5-odbc: fix variant descriptions; see #26203
git-svn-id: https://svn.macports.org/repository/macports/trunk@70831 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-odbc/Portfile
+++ b/dports/php/php5-odbc/Portfile
@@ -19,14 +19,14 @@ checksums                       md5     21ceeeb232813c10283a5ca1b4c87b48 \
 
 use_parallel_build              yes
 
-variant iodbc conflicts unixodbc description {Use unixODBC} {
+variant iodbc conflicts unixodbc description {Use iODBC} {
     depends_lib-append          port:libiodbc
     patchfiles-append           patch-iODBC.diff
     configure.args-append       --with-iODBC=${prefix} \
                                 --with-pdo-odbc=iODBC,${prefix}
 }
 
-variant unixodbc conflicts iodbc description {Use iODBC} {
+variant unixodbc conflicts iodbc description {Use unixODBC} {
     depends_lib-append          port:unixODBC
     patchfiles-append           patch-unixODBC.diff
     configure.args-append       --with-unixODBC=${prefix} \
