--- a/dports/devel/gource/Portfile
+++ b/dports/devel/gource/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name                gource
-version             0.26a
+version             0.27
 categories          devel
 maintainers         nomaintainer
 description         Version Control Visualization Tool
@@ -14,13 +14,14 @@ homepage            http://code.google.com/p/gource/
 platforms           darwin
 master_sites        googlecode
 
-checksums           md5     bd08d0f9325369bc9262a8d273419a52 \
-                    sha1    7efff1616d39964d5250b55d10c4d9ac42f424c4 \
-                    rmd160  eaf352b864e11be7386c5bfc5215e0cbdd632fdb
+checksums           md5     9ccdcd06ac2e357081cc06dc408338c2 \
+                    sha1    7c584681039775994e0194b0548673bf8ba82eb7 \
+                    rmd160  7e428a50f0f7c0c3aca22023b01743191272eb32
 
 depends_lib         port:ftgl \
                     port:libsdl \
                     port:libsdl_image \
                     port:pcre \
                     port:libpng \
-                    port:jpeg
+                    port:jpeg \
+                    port:glew
