--- a/dports/sysutils/e2fsprogs/Portfile
+++ b/dports/sysutils/e2fsprogs/Portfile
@@ -5,6 +5,7 @@ PortSystem                  1.0
 name                        e2fsprogs
 conflicts                   kerberos5
 version                     1.41.11
+revision                    1
 categories                  sysutils
 platforms                   darwin
 maintainers                 nomaintainer
@@ -24,7 +25,7 @@ checksums                   md5     fb507a40c2706bc38306f150d069e345 \
                             rmd160  1190540e1df3b873faf2179ce8cbc618a91fc836
 
 depends_build               port:pkgconfig
-depends_lib                 port:gettext port:ossp-uuid
+depends_lib                 port:gettext
 
 patchfiles                  patch-lib__Makefile.darwin-lib
 
