db44: work around broken upstream patch_sites, #26075
git-svn-id: https://svn.macports.org/repository/macports/trunk@70836 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/db44/Portfile
+++ b/dports/databases/db44/Portfile
@@ -26,7 +26,9 @@ homepage		http://www.oracle.com/database/berkeley-db/
 master_sites		http://download-west.oracle.com/berkeley-db/ \
 			http://download-east.oracle.com/berkeley-db/ \
 			http://download-uk.oracle.com/berkeley-db/ 
-patch_sites		http://www.oracle.com/technology/products/berkeley-db/db/update/${version}/
+# upstream source http://www.oracle.com/technology/products/berkeley-db/db/update/${version}/
+# is broken, ticket #26075
+patch_sites		macports
 
 patchfiles		patch.${version}.1 \
 			patch.${version}.2 \
