--- a/dports/graphics/gimp2/Portfile
+++ b/dports/graphics/gimp2/Portfile
@@ -65,7 +65,7 @@ platform darwin 9 {
 use_parallel_build  yes
 configure.python    ${prefix}/bin/python2.6
 set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
-configure.pkg_config_path ${python_framework}/lib/pkgconfig:${prefix}/lib/pkgconfig:${prefix}/share/pkgconfig
+configure.pkg_config_path ${python_framework}/lib/pkgconfig
 configure.env   PATH=${python_framework}/bin:$env(PATH)
 configure.args  --build=${configure.build_arch}-apple-${os.platform}${os.version} \
                 --enable-mp \
