libtorrent-rasterbar: update to version 0.15.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70843 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libtorrent-rasterbar/Portfile
+++ b/dports/net/libtorrent-rasterbar/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            libtorrent-rasterbar
-version         0.15.1
+version         0.15.2
 categories      net
 maintainers     devans openmaintainer
 platforms       darwin
@@ -19,10 +19,11 @@ long_description \
     seed servers. It comes with python bindings and detailed documentation. 
 
 universal_variant  no
+use_parallel_build no
 
-checksums       md5     6803d692ee57ce78f07092e135ec79d5 \
-                sha1    0a6e24c4a137d202243fab5ed4cf3c6acecebde9 \
-                rmd160  1408abbf37c77059b9db1693c94da9d31b2c5462
+checksums       md5     fdc146b0b89edf45c841bfd8b8e78f37 \
+                sha1    e336424824f46bedb189dcbe904393f03cc780a3 \
+                rmd160  d38c6df0e2be2268ba3271f7b9385203d89b614d
 
 depends_build   port:pkgconfig
 
