evolution-data-server: update to version 2.30.3 with maintainers approval (#26207).
git-svn-id: https://svn.macports.org/repository/macports/trunk@70844 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/evolution-data-server/Portfile
+++ b/dports/gnome/evolution-data-server/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            evolution-data-server
-version         2.26.3
+version         2.30.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Addressbook and calender libs for GNOME.
 long_description    Evolution Data Server provides a central location for \
@@ -15,40 +15,47 @@ platforms       darwin
 homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     01205605a598253bc227ff360c7c3dad \
-                sha1    a9406b748d5a002df9570d17c91066575f2ba408 \
-                rmd160  83f68a464a0cfb50511f33e662d8a24ede42b9e6
+checksums       md5     095bac0a80043d57d00f64319f3cbdbb \
+                sha1    449d3e7a9b19768d5a792434ca5d55c9d2496993 \
+                rmd160  2d4dc2fd6b8dfdc013042400b382f4684e642425
 
 depends_build   port:pkgconfig \
                 port:intltool \
                 port:p5-xml-parser \
                 port:gtk-doc
 
-depends_lib     port:libgnomeui \
+depends_lib     port:gconf \
+                port:libgnome-keyring \
                 port:libgweather \
                 port:libical \
-                port:nss
+                port:nss \
+                port:gnuregex \
+                port:db46
 
 use_bzip2       yes
 
-patchfiles      patch-configure.in.diff
+patchfiles      patch-configure.ac.diff
 
-use_autoconf    yes
+use_autoreconf    yes
+autoreconf.args  -fvi
 
 configure.args  \
         --enable-static \
-        --enable-nss \
         --enable-smime \
         --enable-gnome-keyring \
         --enable-ipv6 \
         --enable-nntp \
-        --with-libiconv=${prefix} \
         --with-nspr-includes=${prefix}/include/nspr  \
         --with-nspr-libs=${prefix}/lib/nspr  \
         --with-nss-includes=${prefix}/include/nss \
         --with-nss-libs=${prefix}/lib/nss \
         --with-krb5=/usr \
         --disable-schemas-install
+
+#
+# port nss is not universal
+#
+universal_variant no
 
 platform darwin 8 {
     post-patch {
