libgweather: ensure build path contains path to python executables (#26201)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70846 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libgweather/Portfile
+++ b/dports/net/libgweather/Portfile
@@ -36,13 +36,19 @@ depends_lib     port:gconf \
 patchfiles      patch-python-prefix.diff
 
 configure.args  --disable-schemas-install \
+                --disable-silent-rules \
                 --disable-glibtest \
                 --enable-python
 
 configure.python ${prefix}/bin/python2.6
-configure.pkg_config_path ${frameworks_dir}/Python.framework/Versions/2.6/lib/pkgconfig
+set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_framework}/lib/pkgconfig
 
-use_parallel_build  yes
+#
+# ensure build path contains path to python executables (#26201)
+#
+
+build.env       PATH=${python_framework}/bin:$env(PATH)
 
 post-activate {
     system "\
