zenity: update to version 2.30.0.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70847 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/zenity/Portfile
+++ b/dports/gnome/zenity/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		zenity
-version		2.26.0
+version		2.30.0
 set branch  [join [lrange [split ${version} .] 0 1] .]
 description	zenity allows you to display dialog boxes from the commandline.
 long_description        This is zenity - a rewrite of gdialog, the GNOME port \
@@ -15,11 +15,11 @@ platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     6660ce6dac0a6ca495a0e954cb6b40a2 \
-                sha1    4dbce1e3058eb9f7166045ea4d7b468499239774 \
-                rmd160  4172557d0ba85f9040767772ca2973de96b6eb40
+checksums       md5     15ba2f27d5e1a79c996e5e53e16f4380 \
+                sha1    a55b0c7e251cdf835dd03b545aa7c96f7ef02384 \
+                rmd160  aa5e482a669fc317e5e0a561f855accdc2c6a173
 
-depends_lib     port:libgnomeui \
+depends_lib     port:gtk2 \
 	        port:libnotify
 
 use_bzip2 	yes
