gnome-desktop: update to version 2.30.2, use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70849 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-desktop/Portfile
+++ b/dports/gnome/gnome-desktop/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            gnome-desktop
-version         2.26.3
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
@@ -20,9 +20,9 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     1668dcedde64b30aa02f0a73e59c957d \
-                sha1    5b1090354ee775392d8faf4ee667a84c9c7a9e79 \
-                rmd160  04e0de4e9e31e2994e1a3220f2183f25ac780399
+checksums       md5     49f06f91b0579c6e5a07ff8195945629 \
+                sha1    92ace7dd3c017a71c9ac90d2df486ebc2ba3d2ba \
+                rmd160  bcdcc3c0483cfb438b2ae30c8f8a840a39967dc5
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -33,12 +33,11 @@ depends_build   port:pkgconfig \
 depends_lib     port:gconf \
                 port:startup-notification \
                 port:xorg-libXrandr \
-                port:python25
+                port:py26-gtk
 
 depends_run     port:gnome-themes
 
 patchfiles      patch-libgnome-destop-gnome-bg.c.diff \
-                patch-libgnome-destop-gnome-rr.c.diff \
                 patch-libgnome-destop-gnome-rr-config.c.diff
 
 configure.args  --with-gnome-distributor=MacPorts \
@@ -46,7 +45,7 @@ configure.args  --with-gnome-distributor=MacPorts \
                 --x-libraries=${prefix}/lib \
                 --disable-scrollkeeper
 
-configure.python  ${prefix}/bin/python2.5
+configure.python  ${prefix}/bin/python2.6
 
 use_parallel_build  yes
 
