--- a/dports/gnome/gst-plugins-base/Portfile
+++ b/dports/gnome/gst-plugins-base/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                gst-plugins-base
 version             0.10.30
-revision            1
+revision            2
 description         This is gst-plugins, a set of plug-ins for GStreamer.
 long_description    ${description}
 maintainers         rmsfisher openmaintainer
@@ -29,6 +29,7 @@ depends_lib	\
 
 configure.args \
     --enable-experimental \
+    --disable-examples \
     --disable-libvisual\
     --disable-gst_v4l \
     --disable-alsa \
@@ -37,6 +38,11 @@ configure.args \
 
 variant no_x11 {
     configure.args-append --without-x --disable-x --disable-xvideo --disable-xshm
+}
+
+variant examples description {Build example programs} {
+    depends_lib-append port:gtk2 port:qt4mac
+    configure.args-delete --disable-examples
 }
 
 # users of qt4-x11, which depends on gst-plugins-base but has no use for its
