farsight2: +python variant is not universal due to dependency on atlas.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70851 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/farsight2/Portfile
+++ b/dports/comms/farsight2/Portfile
@@ -27,11 +27,6 @@ depends_build   port:pkgconfig \
 
 depends_lib     port:libnice
 
-#
-# libnice is not universal
-#
-universal_variant   no
-
 patchfiles      patch-python-pyfarsightmodule.c.diff \
                 patch-configure.diff
 
@@ -45,6 +40,14 @@ configure.args  --disable-gupnp \
                 --disable-python \
                 --disable-silent-rules \
                 --disable-valgrind
+
+#
+# py26-gst-python -> py26-cairo -> py26-numpy -> atlas is not universal
+#
+
+if {[variant_isset python]} {
+        universal_variant no
+}
 
 variant python description {Enable bulding of Python bindings} {
                 configure.args-delete       --disable-python
