Added 'conflicts' to octave ports.
Added in x11 and debug variants to octave-devel, in case anyone wants
to test them out too.


git-svn-id: https://svn.macports.org/repository/macports/trunk@70856 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/octave-devel/Portfile
+++ b/dports/math/octave-devel/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name                octave-devel
 version             3.3.52
+conflicts           octave
 categories          math science
 maintainers         nomaintainer
 platforms           darwin
@@ -146,6 +147,18 @@ if { ![variant_isset gcc43] && ![variant_isset gcc44] && \
 
 variant docs description {Enable creation and installation of documentation} {
     configure.args-replace s|--disable-docs|--enable-docs|
+}
+
+variant x11 description {Enable use of X11} {
+    configure.args-replace s|--without-x|--with-x|
+    configure.args-append --x-includes=${prefix}
+}
+
+variant debug description {Produce debugging information in compiled code} {
+    configure.cflags-append    -g
+    configure.cxxflags-append  -g
+    configure.fflags-append    -g
+    configure.objcflags-append -g
 }
 
 livecheck.type      regex
