Fix for qt4-mac port spelling.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70857 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-base/Portfile
+++ b/dports/gnome/gst-plugins-base/Portfile
@@ -41,7 +41,7 @@ variant no_x11 {
 }
 
 variant examples description {Build example programs} {
-    depends_lib-append port:gtk2 port:qt4mac
+    depends_lib-append port:gtk2 port:qt4-mac
     configure.args-delete --disable-examples
 }
 
