gnome-desktop: not universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70858 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-desktop/Portfile
+++ b/dports/gnome/gnome-desktop/Portfile
@@ -47,7 +47,12 @@ configure.args  --with-gnome-distributor=MacPorts \
 
 configure.python  ${prefix}/bin/python2.6
 
-use_parallel_build  yes
+#
+# gnome-themes is not universal
+# py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+#
+
+universal_variant no
 
 post-activate {
     system "${prefix}/bin/scrollkeeper-update"
