gnome-menus: update to version 2.30.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70859 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-menus/Portfile
+++ b/dports/gnome/gnome-menus/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            gnome-menus
-version         2.26.2
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
@@ -18,9 +18,11 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     23a7375dd20238184f2fcccc4d83846b \
-                sha1    ab914a083ef63bacd960349b3dee3dbd3a005a82 \
-                rmd160  a3b526d908448c52737edecb8f83c6c99e0d72e9
+checksums       md5     5ca9935f50c939881689c48f59348426 \
+                sha1    edbc9b9fc4e86f5cc772011ea768ba9487625d67 \
+                rmd160  cbc2f5aaf529e385c835de84d6284803280494a9
+
+patchfiles      patch-configure.diff
 
 post-patch {
     reinplace "s|/usr/bin/env python|${prefix}/bin/python2.6|g" \
@@ -41,6 +43,16 @@ depends_lib     path:lib/pkgconfig/glib-2.0.pc:glib2 \
                 port:py26-gtk
 
 configure.python   ${prefix}/bin/python2.6
+
+configure.args  --enable-introspection=no \
+                --enable-python \
+                --disable-silent-rules
+
+#
+# py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+#
+
+universal_variant no
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
