gnome-panel: update to version 2.30.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70860 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-panel/Portfile
+++ b/dports/gnome/gnome-panel/Portfile
@@ -3,8 +3,7 @@
 PortSystem      1.0
 
 name            gnome-panel
-version         2.26.3
-revision        1
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
@@ -18,29 +17,43 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     38de69896976d57abb4f4720fef62fcf \
-                sha1    8fdb1e47bef9f3de9c01f830a84ecf30fda3d48f \
-                rmd160  07b961a2224c6de0253495c6aeefdb2fb4804c8e
+checksums       md5     11b6db12223c70a218a2f4602b1683cc \
+                sha1    4be902269d4dd4af1e988d522ae613946890ec0a \
+                rmd160  b5828e0235a6fb5faa011179ff8fcc0574bf3c6b
 
 depends_build   port:pkgconfig \
                 port:intltool \
                 port:p5-xml-parser \
                 port:gnome-doc-utils \
                 port:gtk-doc \
-                port:shared-mime-info
+                port:shared-mime-info \
+                port:python26
 
 depends_lib     port:gnome-desktop \
                 port:gnome-menus \
                 port:policykit-gnome \
                 port:evolution-data-server \
+                port:libbonoboui \
+                port:libcanberra \
                 port:librsvg \
                 port:libwnck
 
+patchfiles      patch-configure.diff
+
+configure.python ${prefix}/bin/python2.6
+ 
 configure.args  --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib \
+                --with-in-process-applets=all \
                 --disable-scrollkeeper \
                 --disable-network-manager \
                 --disable-schemas-install
+
+#
+# gnome_menus is not universal
+#
+
+universal_variant no
 
 post-activate {
     system " \
