libwnck: update to version 2.30.3.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70861 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libwnck/Portfile
+++ b/dports/gnome/libwnck/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            libwnck
-version         2.26.2
+version         2.30.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -20,9 +20,9 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     90d89a7bcf3311877fa4b427719c7483 \
-                sha1    b941006e5edf2877f863c541d52485cd141f96da \
-                rmd160  5554e934419012400dfb293c7d906293028298cc
+checksums       md5     743276e946b2512ef86246f8e9def6a6 \
+                sha1    c65e2a4642dda79b28c3d725234ea52bd4f2b953 \
+                rmd160  df445b92da40518be291fea86c0ca56bc65fc92a
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -41,7 +41,9 @@ pre-fetch {
 }
 
 configure.args  --x-includes=${prefix}/include \
-                --x-libraries=${prefix}/lib
+                --x-libraries=${prefix}/lib \
+                --enable-introspection=no \
+                --disable-silent-rules
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
