--- a/dports/devel/scons/Portfile
+++ b/dports/devel/scons/Portfile
@@ -5,8 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                scons
-version             1.3.0
-revision            0
+version             2.0.1
 categories          devel python
 maintainers         landonf openmaintainer
 
@@ -24,9 +23,8 @@ supported_archs     noarch
 homepage            http://www.scons.org/
 master_sites        sourceforge
 
-checksums           md5     ad6838c867abd2ad5bf371b353d594f7 \
-                    sha1    7694fa60d2a2598c92ef141d04760db29a2a3094 \
-                    rmd160  ebcfd666098d1229ad987264d0e4109d183b37bd
+checksums           md5     beca648b894cdbf85383fffc79516d18 \
+                    sha1    f9183f1b29cb94b48bb3175608831276e60b8fc5
 
 patchfiles          patch-setup.py patch-scons patch-sconsign patch-scons-time
 post-patch {
