--- a/dports/python/py27-macholib/Portfile
+++ b/dports/python/py27-macholib/Portfile
@@ -5,8 +5,7 @@ PortSystem          1.0
 PortGroup python27  1.0
 
 name                py27-macholib
-version             1.2.1
-revision            3
+version             1.3
 categories-append   devel
 license             MIT
 maintainers         nomaintainer
@@ -26,15 +25,10 @@ homepage        http://undefined.org/python/#macholib
 master_sites    http://pypi.python.org/packages/source/m/macholib/
 distname        macholib-${version}
 
-depends_lib-append  path:${python.pkgd}/modulegraph/__init__.py:py27-modulegraph
+depends_lib     path:${python.pkgd}/modulegraph/__init__.py:py27-modulegraph
 
-# patch taken from <http://mail.python.org/pipermail/pythonmac-sig/2009-December/021998.html>
-patchfiles      macholib-lp64.diff
-patch.pre_args  -p1
-
-checksums       md5     7f7f44e62a057d19b92e813fb2f3d05b \
-                sha1    bbe56f3b03ee5b431f34fb66cf22993587687ef8 \
-                rmd160  fa408bc5f1f3f58c0ff3ab43eb56f644bd6b83fa
+checksums       md5     3677cddb286a63e017d4dd1ea407cd45 \
+                sha1    7bdcfac8ea06c534a1d83e01d778448f54918143
 
 livecheck.type  regex
 livecheck.url   http://pypi.python.org/pypi/macholib/
