science/bali-phy: add missing depends_build port:pkgconfig
git-svn-id: https://svn.macports.org/repository/macports/trunk@70865 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/bali-phy/Portfile
+++ b/dports/science/bali-phy/Portfile
@@ -23,6 +23,7 @@ checksums           sha1 0fd83d876d2ef1d0f2676c14ad10ff93621a8530
 patchfiles          configure.patch scripts.patch src-tools-draw-tree.patch
 
 depends_lib         port:gsl port:boost port:cairo
+depends_build       port:pkgconfig
 
 configure.args      --with-system-boost --enable-cairo
 
