add dependency to avoid downloading during build, #26058
git-svn-id: https://svn.macports.org/repository/macports/trunk@70866 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/eggdbus/Portfile
+++ b/dports/devel/eggdbus/Portfile
@@ -27,6 +27,7 @@ depends_build   port:pkgconfig \
                 port:gtk-doc
 
 depends_lib     port:dbus-glib \
+                port:docbook-xsl \
                 port:libxslt
 
 livecheck.type  regex
