phpmyadmin: update to 3.3.5.1, #26157. maintainer timeout
git-svn-id: https://svn.macports.org/repository/macports/trunk@70867 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/phpmyadmin/Portfile
+++ b/dports/www/phpmyadmin/Portfile
@@ -1,10 +1,11 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 
 name                phpmyadmin
 set my_name         phpMyAdmin
-version             3.2.5
+version             3.3.5.1
 categories          www php databases
 maintainers         alakazam
 description         A tool written in PHP intended to handle the \
@@ -21,9 +22,8 @@ master_sites        sourceforge
 distname            ${my_name}-${version}-all-languages
 use_bzip2           yes
 
-checksums           md5     6083ea867a152f58f5c332d0c9b92ac1 \
-                    sha1    e8511c9ddfcd7d157965a6c43a0afcc2be019f08 \
-                    rmd160  4a7bfb6fedb0cceeb038aabacf05f8235ab19e51
+checksums           md5     cf6a1de87b8b590703aaa61aafefc95a \
+                    sha1    5f476c35168fe12bb8d043413fb5519bd842a13a
 
 platforms           darwin freebsd
 
