--- a/dports/www/apache2/Portfile
+++ b/dports/www/apache2/Portfile
@@ -4,8 +4,7 @@
 PortSystem       1.0
 
 name             apache2
-version          2.2.15
-revision         2
+version          2.2.16
 categories       www
 maintainers      imajes
 description      The extremely popular second version of the Apache http server 
@@ -23,9 +22,8 @@ distname         httpd-${version}
 use_bzip2        yes
 use_parallel_build  yes
 
-checksums           md5     016cec97337eccead2aad6a7c27f2e14 \
-                    sha1    5f0e973839ed2e38a4d03adba109ef5ce3381bc2 \
-                    rmd160  e5c5da1fdf86a6b0501f6c8e97ccb1982e81cfdf
+checksums           md5     c8ff2a07c884300bc7766a2e7f662d33 \
+                    sha1    ef92f5b3124fe5e9ba6121ea7f4bab8c014068f9
 
 depends_lib      port:apr \
                  port:apr-util \
