--- a/dports/mail/base64/Portfile
+++ b/dports/mail/base64/Portfile
@@ -1,9 +1,11 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem	1.0
 name		base64 
-version		1.3
+version		1.5
 categories	mail
+license		public-domain
 maintainers	waqar
 description	Encode and decode base64 files 
 long_description	\
@@ -15,6 +17,7 @@ long_description	\
 configure.args  --mandir=${prefix}/share/man
 homepage	http://www.fourmilab.ch/webtools/base64/
 platforms	darwin
-master_sites	http://www.fourmilab.ch/webtools/base64/
-checksums	md5 66d81725ba4d03227af2ce3792e50d5d
-patchfiles	patch-Makefile.in
+master_sites	${homepage}
+checksums	md5 3e6a217ba2c60372156c212dadce1275 \
+		sha1 25b5ae71c2818c7a489065ca1637806cd5109524
+build.target	prog
