auctex: update to 11.86, #26110
git-svn-id: https://svn.macports.org/repository/macports/trunk@70870 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/auctex/Portfile
+++ b/dports/editors/auctex/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem	1.0
 
 name		auctex
-version		11.85
+version		11.86
 categories	editors print
 maintainers	loria.fr:reilles openmaintainer
 description	A major emacs mode for editing TeX files.
@@ -17,7 +18,8 @@ platforms	darwin
 homepage	http://www.gnu.org/software/auctex/
 master_sites	gnu
 
-checksums	md5 597c2adbee11877fe1f9b57baf0ba165
+checksums           sha1    af3dd156f8b2db7764c86d9f7de8abd5811d888a \
+                    rmd160  48c84c8e0a9d7659aeb80f579dc6807dd8f654a6
 
 # We want emacs from MacPorts since this will install stuff in emacs'
 # site-lisp and we want it to go into ${prefix}'s site-lisp.
