ui_msg to notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@70871 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/auctex/Portfile
+++ b/dports/editors/auctex/Portfile
@@ -41,8 +41,5 @@ variant mactex description "If your TeX distribution is MacTeX" {
 	configure.args-append --with-texmf-dir=/usr/local/texlive/texmf-local
 }
 
-post-activate {
-	ui_msg "To use this, put the following into your ~/.emacs:"
-	ui_msg "(require 'tex-site)"
-}
-
+notes "To use this, put the following into your ~/.emacs:\n\
+    (require 'tex-site)"
