libewf: update to 20100226, #26106. maintainer timeout
git-svn-id: https://svn.macports.org/repository/macports/trunk@70872 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/libewf/Portfile
+++ b/dports/security/libewf/Portfile
@@ -1,10 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name		libewf
-version		20100119
-revision	1
+version		20100226
 categories	security
 maintainers	darkart.com:opendarwin.org
 description	Libewf is a library for support of the Expert Witness Compression Format
@@ -21,8 +21,8 @@ long_description Libewf is a library for support of the Expert Witness \
 master_sites        sourceforge \
                     http://www.uitwisselplatform.nl/frs/download.php/529/
 
-checksums           md5     d190e86eebc603f2691d1b4b256ce572 \
-                    sha1    eecf6c67ac1d2ff7426fa7586527a66ebc278df4
+checksums           md5     a697d629bb74df1fa68f22658634fdb9 \
+                    sha1    b9b1012548a7ba445ce4702b08737ddb459c52ec
 
 
 use_bzip2	no
