--- a/dports/devel/grails-devel/Portfile
+++ b/dports/devel/grails-devel/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name				grails-devel
-version				1.3.0.RC2
+version				1.3.4
 categories			devel java
 maintainers			breskeby
 description			An open-source web application framework that leverages the Groovy language
@@ -19,9 +20,8 @@ conflicts			grails
 platforms			darwin
 distname			grails-${version}
 master_sites		http://dist.codehaus.org/grails
-checksums 			md5 8169725046fb2e7bf1e0bc8a30a465df \
-					sha1 57c1568ac5b3392d77b1682d76b090e73b401137 \
-					rmd160 c36e73f209f4b36d8e247e99c58c74657b2c93e2
+checksums           md5     d4c968cf4869cf7afdaae0b17c85beba \
+                    sha1    00d7f70e1e2107488b178097c5c3447c27be6e65
 
 worksrcdir			grails-${version}
 set workTarget		""
@@ -52,6 +52,7 @@ destroot	{
 			  ${worksrcpath}/conf 							\
 			  ${worksrcpath}/lib 							\
 			  ${worksrcpath}/media 							\
+			  ${worksrcpath}/plugins						\
 			  ${worksrcpath}/scripts						\
 			  ${worksrcpath}/src						    \
 			  ${worksrcpath}/build.properties 				\
@@ -62,9 +63,7 @@ destroot	{
 	system "cd ${destroot}${prefix}/bin && ln -s ${prefix}/share/java/grails/bin/startGrails"
 }
 
-post-activate {
- 	        ui_msg "****************************************************************************"
- 	        ui_msg "* Remember to set the environment variable GRAILS_HOME to the path to"
- 	        ui_msg "* the grails distribution: ${prefix}/share/java/grails"
- 	        ui_msg "****************************************************************************"
- }
+notes "\
+    Remember to set the environment variable GRAILS_HOME to the path to\
+    the grails distribution:\n\
+    ${prefix}/share/java/grails"
