ffmpeg, ffmpeg-devel: add missing build dependency on pkgconfig. (#26222)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70875 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg-devel/Portfile
+++ b/dports/multimedia/ffmpeg-devel/Portfile
@@ -51,9 +51,8 @@ distfiles
 
 worksrcdir      trunk
 
-use_parallel_build yes
-
-depends_build   bin:svn:subversion \
+depends_build   port:pkgconfig \
+                bin:svn:subversion \
                 port:gmake \
                 port:texi2html
 
