--- a/dports/multimedia/ffmpeg/Portfile
+++ b/dports/multimedia/ffmpeg/Portfile
@@ -58,9 +58,8 @@ patchfiles      patch-libswscale-Makefile.diff \
                 patch-libswscale-swscale.h.diff \
                 patch-Makefile.diff
 
-use_parallel_build yes
-
-depends_build   port:gmake \
+depends_build   port:pkgconfig \
+                port:gmake \
                 port:texi2html
 
 depends_lib     port:lame \
