epiphany: update to version 2.30.3, no python needed, closes #26166.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70879 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/epiphany/Portfile
+++ b/dports/gnome/epiphany/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		epiphany
-version		2.28.1
+version		2.30.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	A GNOME Web browser.
 long_description	A web browser is more than an application, it is a \
@@ -18,9 +18,9 @@ homepage	http://www.gnome.org/projects/${name}
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2	yes
 
-checksums           md5     7a8b885a4894d2a9e979b8cb8898db1e \
-                    sha1    e15a404e52cdf4fded6a0075f27f46c2ae2a739c \
-                    rmd160  c3d6a33080711ec3c25c6418aba5eb2047b73384
+checksums       md5     6c6f83d07bd6277ddd20d641af253b0c \
+                sha1    c4dab25e46e0c02b29a79e7542c097df621aa3ae \
+                rmd160  f653d7e0e8bfd698eb283725120f849ab3ab8f53
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -28,28 +28,20 @@ depends_build   port:pkgconfig \
                 port:gnome-doc-utils
 
 depends_lib	port:gconf \
-                port:libxslt \
-                port:libglade2 \
-                port:libgnomeui \
-                port:gnome-desktop \
+                port:webkit-gtk \
                 port:startup-notification \
                 port:libnotify \
-                port:libcanberra \
-                port:py25-gtk \
-                port:py25-gnome \
-                port:enchant \
-                port:iso-codes \
-                port:webkit-gtk
+                port:nss \
+                port:iso-codes
 
 configure.args  --with-distributor-name=MacPorts \
+                --enable-introspection=no \
                 --disable-zeroconf \
                 --disable-network-manager \
                 --disable-schemas-install \
                 --disable-scrollkeeper \
-                --disable-nss \
-                --disable-tests
-
-configure.python  ${prefix}/bin/python2.5
+                --disable-tests \
+                --without-ca-file
 
 pre-configure {
     reinplace "s|--rpath=|-rpath |g" ${worksrcpath}/configure
@@ -63,6 +55,12 @@ post-activate {
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
             gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
+
+#
+# webkit-gtk is not universal
+#
+
+universal_variant no
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
